--- a/.github/workflows/linux_python.yml
+++ b/.github/workflows/linux_python.yml
@@ -79,7 +79,8 @@ jobs:
     name: Deploy to PyPI
     runs-on: ubuntu-latest
     # Only from the origin repository, not forks; only main and tags.
-    if: github.repository_owner == 'emsig' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
+    if: github.repository_owner == 'emsig'
+      # && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE
