Test to TestPyPI IV

--- a/.github/workflows/linux_python.yml
+++ b/.github/workflows/linux_python.yml
@@ -134,6 +134,11 @@ jobs:
           echo ""
           echo "Generated files:"
           ls -lh dist/
+          # Copy them to root so they will be found to upload
+          cp -r dist ../../.
+          cp -r build ../../.
+          cp -r .eggs ../../.
+          cp -r libdlf.egg-info ../../.
 
       - name: Publish to Test PyPI
         if: success()
