Test to TestPyPI V

--- a/.github/workflows/linux_python.yml
+++ b/.github/workflows/linux_python.yml
@@ -133,12 +133,13 @@ jobs:
           python setup.py bdist_wheel
           echo ""
           echo "Generated files:"
-          ls -lh dist/
+          ls -lh .
+          #dist/
           # Copy them to root so they will be found to upload
           cp -r dist ../../.
           cp -r build ../../.
-          cp -r .eggs ../../.
-          cp -r libdlf.egg-info ../../.
+          #cp -r .eggs ../../.
+          #cp -r libdlf.egg-info ../../.
 
       - name: Publish to Test PyPI
         if: success()
