--- a/.github/workflows/linux_python.yml
+++ b/.github/workflows/linux_python.yml
@@ -122,8 +122,8 @@ jobs:
           # Change setuptools-scm local_scheme to "no-local-version" so the
           # local part of the version isn't included, making the version string
           # compatible with Test PyPI.
-          cd packages/python
-          sed --in-place 's/"root"/"local_scheme":"no-local-version","root"/g' setup.py
+          sed --in-place 's/"root"/"local_scheme":"no-local-version","root"/g' packages/python/setup.py
+          cat packages/python/setup.py
 
       - name: Build source and wheel distributions
         run: |
