--- a/.github/workflows/linux_python.yml
+++ b/.github/workflows/linux_python.yml
@@ -79,8 +79,7 @@ jobs:
     name: Deploy to PyPI
     runs-on: ubuntu-latest
     # Only from the origin repository, not forks; only main and tags.
-    if: github.repository_owner == 'emsig'
-      # && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
+    if: github.repository_owner == 'emsig' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE
@@ -116,8 +115,8 @@ jobs:
           cd packages
           python create_package.py
 
-      - name: Build source and wheel distributions
-        #if: github.ref == 'refs/heads/main'
+      - name: Replace naming scheme
+        if: github.ref == 'refs/heads/main'
         run: |
           # Change setuptools-scm local_scheme to "no-local-version" so the
           # local part of the version isn't included, making the version string
