--- a/.github/workflows/linux_python.yml
+++ b/.github/workflows/linux_python.yml
@@ -13,31 +13,26 @@ on:
 # Use bash by default in all jobs
 defaults:
   run:
-    # Using "-l {0}" is necessary for conda environments to be activated
-    # But this breaks on MacOS if using actions/setup-python:
-    # https://github.com/actions/setup-python/issues/132
     shell: bash
 
 jobs:
   test:
 
-    name: ${{ matrix.case.os }} py${{ matrix.case.python-version }} ${{ matrix.case.name }}
-    runs-on: ${{ matrix.case.os }}-latest
+    name: ${{ matrix.case.os }} py${{ matrix.case.python-version }}
+    runs-on: ${{ matrix.os }}-latest
 
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu, ]  # macos, windows]  # Only Linux currently.
+        os: [ubuntu, macos, windows]  # Only Linux currently.
         case:
           - python-version: 3.8
-            name: plain
-            os: ubuntu
 
     steps:
 
-      # Cancel any previous run of the test job; [pin v0.8.0 (2021-02-13)]
+      # Cancel any previous run of the test job; [pin v0.9.1 (2021-07-29)]
       - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@3d86a7cc43670094ac248017207be0295edbc31d
+        uses: styfle/cancel-workflow-action@a40b8845c0683271d9f53dfcb887a7e181d3918b
         with:
           access_token: ${{ github.token }}
 
@@ -59,14 +54,11 @@ jobs:
         run: git fetch origin 'refs/tags/*:refs/tags/*'
 
       - name: Install dependencies
-        shell: bash -l {0}
-        run: |
-          pip install setuptools_scm numpy pytest pytest-flake8
+        run: pip install setuptools_scm numpy pytest pytest-flake8
 
 
       # Currently ONLY tests if it can be installed, plus linting
       - name: Flake8 with pytest
-        shell: bash -l {0}
         run: |
           cd packages
           python create_python.py
@@ -107,8 +99,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install wheel
-          pip install setuptools_scm numpy
+          pip install wheel setuptools_scm numpy
 
       - name: Create package
         run: |
