--- a/.github/workflows/linux_python.yml
+++ b/.github/workflows/linux_python.yml
@@ -18,7 +18,7 @@ defaults:
 jobs:
   test:
 
-    name: ${{ matrix.case.os }} py${{ matrix.case.python-version }}
+    name: ${{ matrix.os }} py${{ matrix.case.python-version }}
     runs-on: ${{ matrix.os }}-latest
 
     strategy:
