--- a/.github/workflows/linux_python.yml
+++ b/.github/workflows/linux_python.yml
@@ -1,6 +1,5 @@
 name: linux-python
 
-# Only build PRs, the main branch, and releases.
 on:
   pull_request:
   push:
@@ -10,63 +9,40 @@ on:
     types:
       - published
 
-# Use bash by default in all jobs
 defaults:
   run:
-    # Using "-l {0}" is necessary for conda environments to be activated
-    # But this breaks on MacOS if using actions/setup-python:
-    # https://github.com/actions/setup-python/issues/132
     shell: bash
 
 jobs:
   test:
 
-    name: ${{ matrix.case.os }} py${{ matrix.case.python-version }} ${{ matrix.case.name }}
-    runs-on: ${{ matrix.case.os }}-latest
+    name: ${{ matrix.os }} py${{ matrix.case.python-version }}
+    runs-on: ${{ matrix.os }}-latest
 
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu, ]  # macos, windows]  # Only Linux currently.
+        os: [ubuntu, ]  # Only Linux for _creation_]
         case:
           - python-version: 3.8
-            name: plain
-            os: ubuntu
 
     steps:
 
-      # Cancel any previous run of the test job; [pin v0.8.0 (2021-02-13)]
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@3d86a7cc43670094ac248017207be0295edbc31d
-        with:
-          access_token: ${{ github.token }}
-
-      # Checks-out your repository under $GITHUB_WORKSPACE
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          # Need to fetch more than the last commit so that setuptools_scm can
-          # create the correct version string. If the number of commits since
-          # the last release is greater than this, the version still be wrong.
-          # Increase if necessary.
           fetch-depth: 100
-          # The GitHub token is preserved by default but this job doesn't need
-          # to be able to push to GitHub.
           persist-credentials: false
 
-      # Need the tags so that setuptools_scm can form a valid version number
       - name: Fetch git tags
         run: git fetch origin 'refs/tags/*:refs/tags/*'
 
       - name: Install dependencies
-        shell: bash -l {0}
         run: |
+          python -m pip install --upgrade pip
           pip install setuptools_scm numpy pytest pytest-flake8
 
-
-      # Currently ONLY tests if it can be installed, plus linting
-      - name: Flake8 with pytest
-        shell: bash -l {0}
+      - name: Create, install, lint and test
         run: |
           cd packages
           python create_python.py
@@ -82,20 +58,12 @@ jobs:
     if: github.repository_owner == 'emsig' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
 
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          # Need to fetch more than the last commit so that setuptools_scm can
-          # create the correct version string. If the number of commits since
-          # the last release is greater than this, the version will still be
-          # wrong. Increase if necessary.
           fetch-depth: 100
-          # The GitHub token is preserved by default but this job doesn't need
-          # to be able to push to GitHub.
           persist-credentials: false
 
-      # Need the tags so that setuptools_scm can form a valid version number
       - name: Fetch git tags
         run: git fetch origin 'refs/tags/*:refs/tags/*'
 
@@ -107,8 +75,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install wheel
-          pip install setuptools_scm numpy
+          pip install wheel setuptools_scm numpy
 
       - name: Create package
         run: |
@@ -136,8 +103,8 @@ jobs:
 
       - name: Publish to Test PyPI
         if: success()
-        # Hash corresponds to v1.4.1
-        uses: pypa/gh-action-pypi-publish@54b39fb9371c0b3a6f9f14bb8a67394defc7a806
+        # [pin v1.4.2 (2021-02-08)]
+        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
         with:
           user: __token__
           password: ${{ secrets.TEST_PYPI_PASSWORD }}
@@ -150,8 +117,8 @@ jobs:
       - name: Publish to PyPI
         # Only for releases
         if: success() && github.event_name == 'release'
-        # Hash corresponds to v1.4.1
-        uses: pypa/gh-action-pypi-publish@54b39fb9371c0b3a6f9f14bb8a67394defc7a806
+        # [pin v1.4.2 (2021-02-08)]
+        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
         with:
           user: __token__
           password: ${{ secrets.PYPI_PASSWORD }}
