--- a/.github/workflows/julia_deploy.yml
+++ b/.github/workflows/julia_deploy.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           version: '1.6'
       - name: Install dependencies
-        run: julia -e 'import Pkg; Pkg.add("DelimitedFiles"); Pkg.add("JSON")'           
+        run: julia -e 'import Pkg; Pkg.add("DataStructures"); Pkg.add("JSON")'           
       - name: Create package
         run: |
           cd packages
