--- a/.github/workflows/julia_deploy.yml
+++ b/.github/workflows/julia_deploy.yml
@@ -42,6 +42,6 @@ jobs:
         env:
           REPO: self
           BRANCH: package-julia
-          FOLDER: package/julia
+          FOLDER: packages/julia
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
