added Julia registration

--- a/.github/workflows/julia_deploy.yml
+++ b/.github/workflows/julia_deploy.yml
@@ -43,5 +43,6 @@ jobs:
           REPO: self
           BRANCH: package-julia
           FOLDER: packages/julia
+          MESSAGE: "@JuliaRegistrator register"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
