fixed for JuliaRegistrator

--- a/.github/workflows/julia_deploy.yml
+++ b/.github/workflows/julia_deploy.yml
@@ -43,6 +43,6 @@ jobs:
           REPO: self
           BRANCH: package-julia
           FOLDER: packages/julia
-          MESSAGE: "@JuliaRegistrator register"
+          MESSAGE: "@JuliaRegistrator register branch=package-julia"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
