--- a/.github/workflows/julia_deploy.yml
+++ b/.github/workflows/julia_deploy.yml
@@ -42,6 +42,7 @@ jobs:
         env:
           REPO: https://github.com/emsig/DLFlib.jl
           BRANCH: main
+          FOLDER: /
           MESSAGE: "auto deployed update from https://github.com/emsig/libdlf"
           SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_PRIVATE_KEY }}
 
