--- a/.github/workflows/julia_deploy.yml
+++ b/.github/workflows/julia_deploy.yml
@@ -40,7 +40,7 @@ jobs:
         uses: s0/git-publish-subdir-action@develop
         if: success()
         env:
-          REPO: https://github.com/emsig/DLFlib.jl
+          REPO: git@github.com:emsig/DLFlib.jl.git
           BRANCH: main
           FOLDER: /
           MESSAGE: "auto deployed update from https://github.com/emsig/libdlf"
