--- a/.github/workflows/julia_deploy.yml
+++ b/.github/workflows/julia_deploy.yml
@@ -45,4 +45,5 @@ jobs:
           FOLDER: packages/julia
           MESSAGE: "@JuliaRegistrator register branch=package-julia"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_PRIVATE_KEY }}
           
