--- a/.github/workflows/julia_deploy.yml
+++ b/.github/workflows/julia_deploy.yml
@@ -43,7 +43,7 @@ jobs:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
           source-directory: 'packages/julia'
-          destination-github-username: 'emsig'
+          destination-github-username: 'kerrykey'
           destination-repository-name: 'DLFlib.jl'
           user-email: kkey@ldeo.columbia.edu
           target-branch: main
