--- a/.github/workflows/julia_deploy.yml
+++ b/.github/workflows/julia_deploy.yml
@@ -37,15 +37,11 @@ jobs:
           cd packages
           julia create_julia.jl 
       - name: Push to DLFlib.jl repo
-        uses: cpina/github-action-push-to-another-repository@main
+        uses: s0/git-publish-subdir-action@develop
         if: success()
         env:
-          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
-        with:
-          source-directory: 'packages/julia'
-          destination-github-username: 'kerrykey'
-          destination-repository-name: 'DLFlib.jl'
-          user-email: kkey@ldeo.columbia.edu
-          target-branch: main
-          
-          
+         REPO: https://github.com/emsig/DLFlib.jl
+         BRANCH: main
+         MESSAGE: "auto deployed update from https://github.com/emsig/libdlf"
+         SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_PRIVATE_KEY }}
+
