--- a/.github/workflows/julia_deploy.yml
+++ b/.github/workflows/julia_deploy.yml
@@ -39,11 +39,12 @@ jobs:
       - name: Push generate Julia package to DLFlib.jl repo
         uses: EndBug/add-and-commit@v7 # You can change this to use a specific version
         with:
-          # The arguments for the `git add` command (see the paragraph below for more info)
-          # Default: '.'
           add: 'packages/julia'
           default_author: github_actor
           message: 'auto build of LibDLF.jl'
+          author_name: esmig
+ 
+
  
         
  
