--- a/.github/workflows/julia_deploy.yml
+++ b/.github/workflows/julia_deploy.yml
@@ -36,8 +36,8 @@ jobs:
         run: |
           cd packages
           julia create_julia.jl 
-      - name: Push generate Julia package to DLFlib.jl repo
-        uses: EndBug/add-and-commit@v2 # You can change this to use a specific version
+      - name: Commit built Julia package files for DLFlib.jl to repo
+        uses: EndBug/add-and-commit@v7
         with:
           add: 'packages/julia'
           message: 'auto build of LibDLF.jl'
