--- a/.github/workflows/julia_deploy.yml
+++ b/.github/workflows/julia_deploy.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           add: 'packages/julia'
           message: 'auto build of LibDLF.jl'
-          default_author: - github_actions
+          default_author: github_actions
 
 
           
