--- a/.github/workflows/julia_deploy.yml
+++ b/.github/workflows/julia_deploy.yml
@@ -37,7 +37,7 @@ jobs:
           cd packages
           julia create_julia.jl 
       - name: Commit built Julia package files for LibDLF.jl to repo
-      - uses: EndBug/add-and-commit@v7
+        uses: EndBug/add-and-commit@v7
         with:
           default_author: github_actions
 
