--- a/.github/workflows/package-julia.yml
+++ b/.github/workflows/package-julia.yml
@@ -14,9 +14,9 @@ defaults:
     shell: bash
 
 jobs:
-  # test:  
-  deploy:  
-    name: Deploy to package-julia   
+ 
+  test:  
+    name: Build package-julia   
     runs-on: ubuntu-latest
  
     steps:
@@ -35,16 +35,39 @@ jobs:
         run: |
           cd packages
           julia create_julia.jl 
-      - name: Deploy to packages-julia branch
-        uses: s0/git-publish-subdir-action@develop
-        if: success()
-        env:
-          REPO: self
-          BRANCH: package-julia
-          FOLDER: packages/julia
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
- 
+    deploy:  
+      name: Deploy package-julia   
+      runs-on: ubuntu-latest
+      needs: test
+      # Only from the origin repository, not forks; only main and tags.
+      if: github.repository_owner == 'emsig' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
+
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v2
+          with:
+            fetch-depth: 100  
+        - name: Fetch git tags   
+          run: git fetch origin 'refs/tags/*:refs/tags/*'
+        - uses: julia-actions/setup-julia@v1
+          with:
+            version: '1.6'
+        - name: Install dependencies
+          run: julia -e 'import Pkg; Pkg.add("DataStructures"); Pkg.add("JSON")'           
+        - name: Create package
+          run: |
+            cd packages
+            julia create_julia.jl 
+        - name: Deploy to packages-julia branch
+          uses: s0/git-publish-subdir-action@develop
+          if: success()
+          env:
+            REPO: self
+            BRANCH: package-julia
+            FOLDER: packages/julia
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
  
         
