--- a/.github/workflows/package-julia.yml
+++ b/.github/workflows/package-julia.yml
@@ -35,6 +35,12 @@ jobs:
         run: |
           cd packages
           julia create_julia.jl 
+      - name: run tests:    
+        run: |
+          cd julia/LibDLF.jl     
+      #- uses: julia-actions/julia-buildpkg@v1
+      - uses: julia-actions/julia-runtest@v1
+
 
   deploy:  
     name: Deploy package-julia   
