--- a/.github/workflows/package-julia.yml
+++ b/.github/workflows/package-julia.yml
@@ -37,7 +37,7 @@ jobs:
           julia create_julia.jl 
       - name: run tests 
         run: |
-          cd julia/LibDLF.jl     
+          cd packages/julia/LibDLF.jl     
       #- uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
 
