--- a/.github/workflows/package-julia.yml
+++ b/.github/workflows/package-julia.yml
@@ -35,13 +35,12 @@ jobs:
         run: |
           cd packages
           julia create_julia.jl 
-      - name: run tests 
-        run: |
-              
-      #- uses: julia-actions/julia-buildpkg@v1
+      #- name: run tests 
+      #  run: | 
+      - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
-        with:
-          prefix: cd packages/julia/LibDLF.jl;
+        #with:
+        #  prefix: cd packages/julia/LibDLF.jl;
 
   deploy:  
     name: Deploy package-julia   
