--- a/.github/workflows/package-julia.yml
+++ b/.github/workflows/package-julia.yml
@@ -16,7 +16,7 @@ defaults:
 jobs:
  
   test:  
-    name: Build package-julia   
+    name: Build and test package-julia   
     runs-on: ubuntu-latest
  
     steps:
@@ -41,8 +41,11 @@ jobs:
           julia --color=yes --project=@. -e 'using Pkg; if VERSION >= v"1.1.0-rc1"; Pkg.build(verbose=true); else Pkg.build(); end'
       - name: Run tests
         run: |
-          cd packages/julia/LibDLF.jl/test
-          julia --color=yes  runtests.jl 
+          cd packages/julia/LibDLF.jl 
+          julia --check-bounds=yes --color=yes --project=./ -e 'import Pkg;Pkg.test()' 
+          # Run the Julia command
+          #"${julia_cmd[@]}"
+         
 
   deploy:  
     name: Deploy package-julia   
