--- a/.github/workflows/python_test_deploy.yml
+++ b/.github/workflows/python_test_deploy.yml
@@ -29,7 +29,7 @@ jobs:
     steps:
 
       - name: Checkout
-        uses: actions/checkout@v4.2.1
+        uses: actions/checkout@v4
         with:
           fetch-depth: 100
           persist-credentials: false
@@ -38,21 +38,21 @@ jobs:
         run: git fetch origin 'refs/tags/*:refs/tags/*'
 
       - name: Setup Python
-        uses: actions/setup-python@v5.2.0
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.case.python-version }}
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install numpy pytest pytest-flake8
+          python -m pip install numpy pytest pytest-flake8 flake8-pyproject
 
       - name: Create, install, lint and test
         run: |
           cd packages
           python create_python.py
-          pip install python/.
           cd python
+          python -m pip install .
           pytest --flake8
 
   deploy:
@@ -64,7 +64,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4.2.1
+        uses: actions/checkout@v4
         with:
           fetch-depth: 100
           persist-credentials: false
@@ -73,7 +73,7 @@ jobs:
         run: git fetch origin 'refs/tags/*:refs/tags/*'
 
       - name: Setup Python
-        uses: actions/setup-python@v5.2.0
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.case.python-version }}
 
