--- a/.github/workflows/python_test_deploy.yml
+++ b/.github/workflows/python_test_deploy.yml
@@ -80,30 +80,25 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install wheel numpy
+          python -m pip install build setuptools-scm
 
       - name: Create package
         run: |
           cd packages
           python create_python.py
-          echo ""
-          echo "Version:"
-          echo python python/setup.py --version
 
       - name: Build source and wheel distributions
         run: |
           # Build source and wheel packages
           cd packages/python
-          python setup.py sdist
-          python setup.py bdist_wheel
+          python -m build
           echo ""
           echo "Generated files:"
           ls -lh dist/
 
       - name: Publish to Test PyPI
         if: success()
-        # [pin v1.4.2 (2021-02-08)]
-        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
           password: ${{ secrets.TEST_PYPI_PASSWORD }}
@@ -116,8 +111,7 @@ jobs:
       - name: Publish to PyPI
         # Only for releases
         if: success() && github.event_name == 'release'
-        # [pin v1.4.2 (2021-02-08)]
-        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
           password: ${{ secrets.PYPI_PASSWORD }}
