--- a/.github/workflows/python_test_deploy.yml
+++ b/.github/workflows/python_test_deploy.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install build setuptools-scm
+          python -m pip install build setuptools-scm numpy
 
       - name: Create package
         run: |
